# finmail

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  RELEASES.md  makefile  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: create-tag.yml  deploy-function.yml  main_finmail-function.yml  main_finmail-functions.yml  pre-commit.yml  unit-tests.yml
ingest/: __init__.py  function.json
shared_code/: __init__.py
shared_code/finmail/: __init__.py  config.py  ingest.py  models.py
shared_code/finmail/clients/: __init__.py  google.py
shared_code/finmail/core/: __init__.py  classifier.py  config.py  google_client.py
shared_code/finmail/domain/: ingest.py
shared_code/finmail/domain/classification/: __init__.py  classification_rules.py  classifier.py  rule_providers.py
shared_code/finmail/domain/parsers/: __init__.py  base.py  rappicard.py  rappipay.py  registry.py  remotepass.py
shared_code/finmail/parsers/: __init__.py  base.py  rappicard.py  registry.py  utils.py
shared_code/finmail/utils/: __init__.py  dates.py  html.py  project.py  text.py
tests/: conftest.py
tests/html_samples/: rappicard.html  rappicard_decimal.html  rappipay_bank_transfer.html  rappipay_bank_transfer_in.html  rappipay_bank_transfer_out.html  rappipay_llave_transfer_in.html  rappipay_llave_transfer_out.html  rappipay_pse_payment.html  remotepass.html  remotepass_payment.html  to_clean_example.html
tests/shared_code/finmail/: test_models.py
tests/shared_code/finmail/domain/classification/: test_classification_rules.py  test_classifier.py  test_rule_providers.py
tests/shared_code/finmail/domain/parsers/: test_rappicard.py  test_rappipay.py  test_registry.py  test_remotepass.py
tests/shared_code/finmail/parsers/: test_rappicard.py  test_registry.py
tests/shared_code/finmail/utils/: test_dates.py  test_html.py  test_text.py
