[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "mypy>=1.17.1",
  "pytest>=8.4.1",
  "ruff>=0.12.8"
]

[project]
name = "finmail"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
  {name = "Juan David Herrera", email = "juandaherreparra@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
  "azure-functions>=1.23.0",
  "pydantic>=2.11.7",
  "pydantic-settings>=2.10.1"
]

[tool.hatch.build.targets.wheel]
packages = ["shared_code/finmail"]

[tool.mypy]
python_version = "3.12"
mypy_path = ["shared_code"]
explicit_package_bases = true
packages = ["finmail"]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py311"
include = ["shared_code/*", "ingest/*", "tests/*"]
preview = true
exclude = ["*.json", "py.typed"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
  "F", # Pyflakes
  "W", # pycodestyle
  "E", # pycodestyle
  "D", # docstrings
  "I", # isort
  "UP", # pyupgrade
  "PL", # Pylint
  "T201", # Print Statement
  "S", # flake8-bandit
  "TC", # flake8-type-checking
  "RUF", # Ruff-specific rules
  "C90", # McCabe
  "N", # Naming
  "B", # Bugbear
  "A", # Builtins
  "G", # Logging format
  "PIE", # PIE
  "T20", # Print
  "RET", # Return
  "ARG", # Argument unused
  "TD", # TODO
  "DOC" # pydoclint
]
ignore = [
  "D203", # one-blank-line-before-class
  "D212", # multi-line-summary-first-line
  "D413", # new-line-after-last-paragraph
  "TD003" # missing-todo-link
]

[tool.ruff.lint.isort]
known-first-party = ["finmail"]
