[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "pytest>=8.4.1",
  "pytest-cov>=6.2.1",
  "ruff>=0.12.8"
]

[project]
name = "finmail"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
  {name = "Juan David Herrera", email = "juandaherreparra@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
  "azure-functions>=1.23.0",
  "beautifulsoup4>=4.13.4",
  "email-validator>=2.2.0",
  "lxml>=6.0.0",
  "pydantic>=2.11.7",
  "pydantic-settings>=2.10.1",
  "python-dateutil>=2.9.0.post0"
]

[tool.coverage.run]
omit = ["tests/*"]

[tool.hatch.build.targets.wheel]
packages = ["shared_code/finmail"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = """
  --cov .
  --cov-report xml:coverage.xml
  --cov-report term
  --cov-report term-missing
  --cov-fail-under 60
"""

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py311"
include = ["shared_code/*", "ingest/*", "tests/*"]
preview = true
exclude = ["*.json", "py.typed", "*.html"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
  "F", # Pyflakes
  "W", # pycodestyle
  "E", # pycodestyle
  "D", # docstrings
  "I", # isort
  "UP", # pyupgrade
  "PL", # Pylint
  "T201", # Print Statement
  "S", # flake8-bandit
  "TC", # flake8-type-checking
  "RUF", # Ruff-specific rules
  "C90", # McCabe
  "N", # Naming
  "B", # Bugbear
  "A", # Builtins
  "G", # Logging format
  "PIE", # PIE
  "T20", # Print
  "RET", # Return
  "ARG", # Argument unused
  "TD", # TODO
  "DOC" # pydoclint
]
ignore = [
  "D203", # one-blank-line-before-class
  "D212", # multi-line-summary-first-line
  "D413", # new-line-after-last-paragraph
  "TD003" # missing-todo-link
]

[tool.ruff.lint.isort]
known-first-party = ["finmail"]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = [
  "D", # docstrings
  "S101", # Asserts
  "PLR2004" # Magic value comparison
]
